# makeitrollicub

app/scripts/: app.xml  system.xml
src/: CMakeLists.txt  main.cpp
